// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data layer integration tests Test fetchDatesTab Should fetch, normalize, and save metadata 1`] = `
{
  "courseHome": {
    "courseId": "course-v1:edX+DemoX+Demo_Course",
    "courseStatus": "loaded",
    "proctoringPanelStatus": "loading",
    "showSearch": false,
    "targetUserId": undefined,
    "toastBodyLink": null,
    "toastBodyText": null,
    "toastHeader": "",
  },
  "courseware": {
    "courseId": null,
    "courseOutline": {},
    "courseOutlineShouldUpdate": false,
    "courseOutlineStatus": "loading",
    "courseStatus": "loading",
    "coursewareOutlineSidebarSettings": {},
    "sequenceId": null,
    "sequenceMightBeUnit": false,
    "sequenceStatus": "loading",
  },
  "learningAssistant": ObjectContaining {
    "conversationId": Any<String>,
  },
  "models": {
    "courseHomeMeta": {
      "course-v1:edX+DemoX+Demo_Course": {
        "canViewCertificate": true,
        "celebrations": null,
        "courseAccess": {
          "additionalContextUserMessage": null,
          "developerMessage": null,
          "errorCode": null,
          "hasAccess": true,
          "userFragment": null,
          "userMessage": null,
        },
        "id": "course-v1:edX+DemoX+Demo_Course",
        "isEnrolled": false,
        "isMasquerading": false,
        "isNewDiscussionSidebarViewEnabled": false,
        "isSelfPaced": false,
        "isStaff": false,
        "number": "DemoX",
        "org": "edX",
        "originalUserIsStaff": false,
        "start": "2013-02-05T05:00:00Z",
        "tabs": [
          {
            "slug": "outline",
            "title": "Course",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course/",
          },
          {
            "slug": "discussion",
            "title": "Discussion",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/discussion/forum/",
          },
          {
            "slug": "wiki",
            "title": "Wiki",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course_wiki",
          },
          {
            "slug": "progress",
            "title": "Progress",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/progress",
          },
          {
            "slug": "instructor",
            "title": "Instructor",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/instructor",
          },
          {
            "slug": "dates",
            "title": "Dates",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/dates",
          },
        ],
        "title": "Demonstration Course",
        "userTimezone": "UTC",
        "username": "MockUser",
        "verifiedMode": {
          "accessExpirationDate": null,
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "8CF08E5",
          "upgradeUrl": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
      },
    },
    "dates": {
      "course-v1:edX+DemoX+Demo_Course": {
        "courseDateBlocks": [
          {
            "date": "2020-05-01T17:59:41Z",
            "dateType": "course-start-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "",
            "title": "Course Starts",
          },
          {
            "assignmentType": "Homework",
            "complete": true,
            "date": "2020-05-04T02:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "title": "Multi Badges Completed",
          },
          {
            "assignmentType": "Homework",
            "date": "2020-05-05T02:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "title": "Multi Badges Past Due",
          },
          {
            "assignmentType": "Homework",
            "date": "2020-05-27T02:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "Both Past Due 1",
          },
          {
            "assignmentType": "Homework",
            "date": "2020-05-27T02:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "Both Past Due 2",
          },
          {
            "assignmentType": "Homework",
            "complete": true,
            "date": "2020-05-28T08:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "One Completed/Due 1",
          },
          {
            "assignmentType": "Homework",
            "date": "2020-05-28T08:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "One Completed/Due 2",
          },
          {
            "assignmentType": "Homework",
            "complete": true,
            "date": "2020-05-29T08:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "Both Completed 1",
          },
          {
            "assignmentType": "Homework",
            "complete": true,
            "date": "2020-05-29T08:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "Both Completed 2",
          },
          {
            "date": "2020-06-16T17:59:40.942669Z",
            "dateType": "verified-upgrade-deadline",
            "description": "Don't miss the opportunity to highlight your new knowledge and skills by earning a verified certificate.",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "Upgrade to Verified Certificate",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-17T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": false,
            "link": "https://example.com/",
            "title": "One Verified 1",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-17T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "One Verified 2",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-17T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": "ORA Dates are set by the instructor, and can't be changed",
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "ORA Verified 2",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-18T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": false,
            "link": "https://example.com/",
            "title": "Both Verified 1",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-18T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": false,
            "link": "https://example.com/",
            "title": "Both Verified 2",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-19T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "learnerHasAccess": true,
            "title": "One Unreleased 1",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-19T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "https://example.com/",
            "title": "One Unreleased 2",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-20T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "title": "Both Unreleased 1",
          },
          {
            "assignmentType": "Homework",
            "date": "2030-08-20T05:59:40.942669Z",
            "dateType": "assignment-due-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "title": "Both Unreleased 2",
          },
          {
            "date": "2030-08-23T00:00:00Z",
            "dateType": "course-end-date",
            "description": "",
            "extraInfo": null,
            "learnerHasAccess": true,
            "link": "",
            "title": "Course Ends",
          },
          {
            "date": "2030-09-01T00:00:00Z",
            "dateType": "verification-deadline-date",
            "description": "You must successfully complete verification before this date to qualify for a Verified Certificate.",
            "extraInfo": null,
            "learnerHasAccess": false,
            "link": "https://example.com/",
            "title": "Verification Deadline",
          },
        ],
        "datesBannerInfo": {
          "contentTypeGatingEnabled": false,
          "missedDeadlines": false,
          "missedGatedContent": false,
          "verifiedUpgradeLink": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
        "hasEnded": false,
        "id": "course-v1:edX+DemoX+Demo_Course",
        "learnerIsFullAccess": true,
      },
    },
  },
  "plugins": {},
  "recommendations": {
    "recommendationsStatus": "loading",
  },
  "specialExams": {
    "activeAttempt": null,
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": {
      "attempt": {
        "attempt_code": "",
        "attempt_id": null,
        "attempt_status": "",
        "course_id": "",
        "desktop_application_js_url": "",
        "exam_display_name": "",
        "exam_started_poll_url": "",
        "exam_type": "",
        "exam_url_path": "",
        "external_id": "",
        "in_timed_exam": true,
        "ping_interval": null,
        "taking_as_proctored": true,
        "time_remaining_seconds": null,
        "use_legacy_attempt_api": true,
      },
      "backend": "",
      "content_id": "",
      "course_id": "",
      "due_date": null,
      "exam_name": "",
      "external_id": "",
      "hide_after_due": false,
      "id": null,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": [],
        "failed_prerequisites": [],
        "pending_prerequisites": [],
        "satisfied_prerequisites": [],
      },
      "time_limit_mins": null,
      "type": "",
    },
    "examAccessToken": {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": true,
    "proctoringSettings": {
      "exam_proctoring_backend": {
        "download_url": "",
        "instructions": [],
        "name": "",
        "rules": {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
  "tours": {
    "showCoursewareTour": false,
    "showExistingUserCourseHomeTour": false,
    "showNewUserCourseHomeModal": false,
    "showNewUserCourseHomeTour": false,
    "toursEnabled": false,
  },
}
`;

exports[`Data layer integration tests Test fetchOutlineTab Should fetch, normalize, and save metadata 1`] = `
{
  "courseHome": {
    "courseId": "course-v1:edX+DemoX+Demo_Course",
    "courseStatus": "loaded",
    "proctoringPanelStatus": "loading",
    "showSearch": false,
    "targetUserId": undefined,
    "toastBodyLink": null,
    "toastBodyText": null,
    "toastHeader": "",
  },
  "courseware": {
    "courseId": null,
    "courseOutline": {},
    "courseOutlineShouldUpdate": false,
    "courseOutlineStatus": "loading",
    "courseStatus": "loading",
    "coursewareOutlineSidebarSettings": {},
    "sequenceId": null,
    "sequenceMightBeUnit": false,
    "sequenceStatus": "loading",
  },
  "learningAssistant": ObjectContaining {
    "conversationId": Any<String>,
  },
  "models": {
    "courseHomeMeta": {
      "course-v1:edX+DemoX+Demo_Course": {
        "canViewCertificate": true,
        "celebrations": null,
        "courseAccess": {
          "additionalContextUserMessage": null,
          "developerMessage": null,
          "errorCode": null,
          "hasAccess": true,
          "userFragment": null,
          "userMessage": null,
        },
        "id": "course-v1:edX+DemoX+Demo_Course",
        "isEnrolled": false,
        "isMasquerading": false,
        "isNewDiscussionSidebarViewEnabled": false,
        "isSelfPaced": false,
        "isStaff": false,
        "number": "DemoX",
        "org": "edX",
        "originalUserIsStaff": false,
        "start": "2013-02-05T05:00:00Z",
        "tabs": [
          {
            "slug": "outline",
            "title": "Course",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course/",
          },
          {
            "slug": "discussion",
            "title": "Discussion",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/discussion/forum/",
          },
          {
            "slug": "wiki",
            "title": "Wiki",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course_wiki",
          },
          {
            "slug": "progress",
            "title": "Progress",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/progress",
          },
          {
            "slug": "instructor",
            "title": "Instructor",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/instructor",
          },
          {
            "slug": "dates",
            "title": "Dates",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/dates",
          },
        ],
        "title": "Demonstration Course",
        "userTimezone": "UTC",
        "username": "MockUser",
        "verifiedMode": {
          "accessExpirationDate": null,
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "8CF08E5",
          "upgradeUrl": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
      },
    },
    "outline": {
      "course-v1:edX+DemoX+Demo_Course": {
        "accessExpiration": null,
        "canShowUpgradeSock": false,
        "certData": {
          "certStatus": null,
          "certWebViewUrl": null,
          "certificateAvailableDate": null,
        },
        "courseBlocks": {
          "courses": {
            "block-v1:edX+DemoX+Demo_Course+type@course+block@bcdabcdabcdabcdabcdabcdabcdabcd3": {
              "hasScheduledContent": false,
              "id": "course-v1:edX+DemoX+Demo_Course",
              "sectionIds": [
                "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              ],
              "title": "bcdabcdabcdabcdabcdabcdabcdabcd3",
            },
          },
          "sections": {
            "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd2": {
              "complete": false,
              "courseId": "course-v1:edX+DemoX+Demo_Course",
              "hideFromTOC": undefined,
              "id": "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              "resumeBlock": false,
              "sequenceIds": [
                "block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd1",
              ],
              "title": "Title of Section",
            },
          },
          "sequences": {
            "block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd1": {
              "complete": false,
              "description": null,
              "due": null,
              "effortActivities": 2,
              "effortTime": 15,
              "hideFromTOC": undefined,
              "icon": null,
              "id": "block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd1",
              "navigationDisabled": undefined,
              "sectionId": "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              "showLink": true,
              "title": "Title of Sequence",
            },
          },
        },
        "courseGoals": {
          "daysPerWeek": null,
          "goalOptions": [],
          "selectedGoal": null,
          "subscribedToReminders": null,
          "weeklyLearningGoalEnabled": false,
        },
        "courseTools": [
          {
            "analyticsId": "edx.bookmarks",
            "title": "Bookmarks",
            "url": "https://example.com/bookmarks",
          },
        ],
        "datesBannerInfo": {
          "contentTypeGatingEnabled": false,
          "missedDeadlines": false,
          "missedGatedContent": false,
        },
        "datesWidget": {
          "courseDateBlocks": [],
        },
        "enableProctoredExams": undefined,
        "enrollAlert": {
          "canEnroll": true,
          "extraText": "Contact the administrator.",
        },
        "enrollmentMode": undefined,
        "handoutsHtml": "<ul><li>Handout 1</li></ul>",
        "hasEnded": undefined,
        "hasScheduledContent": null,
        "id": "course-v1:edX+DemoX+Demo_Course",
        "offer": null,
        "resumeCourse": {
          "hasVisitedCourse": false,
          "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/jump_to/block-v1:edX+Test+Block@12345abcde",
        },
        "timeOffsetMillis": 0,
        "userHasPassingGrade": undefined,
        "verifiedMode": {
          "accessExpirationDate": "2050-01-01T12:00:00",
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "ABCD1234",
          "upgradeUrl": "http://localhost:18000/dashboard",
        },
        "welcomeMessageHtml": "<p>Welcome to this course!</p>",
      },
    },
  },
  "plugins": {},
  "recommendations": {
    "recommendationsStatus": "loading",
  },
  "specialExams": {
    "activeAttempt": null,
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": {
      "attempt": {
        "attempt_code": "",
        "attempt_id": null,
        "attempt_status": "",
        "course_id": "",
        "desktop_application_js_url": "",
        "exam_display_name": "",
        "exam_started_poll_url": "",
        "exam_type": "",
        "exam_url_path": "",
        "external_id": "",
        "in_timed_exam": true,
        "ping_interval": null,
        "taking_as_proctored": true,
        "time_remaining_seconds": null,
        "use_legacy_attempt_api": true,
      },
      "backend": "",
      "content_id": "",
      "course_id": "",
      "due_date": null,
      "exam_name": "",
      "external_id": "",
      "hide_after_due": false,
      "id": null,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": [],
        "failed_prerequisites": [],
        "pending_prerequisites": [],
        "satisfied_prerequisites": [],
      },
      "time_limit_mins": null,
      "type": "",
    },
    "examAccessToken": {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": true,
    "proctoringSettings": {
      "exam_proctoring_backend": {
        "download_url": "",
        "instructions": [],
        "name": "",
        "rules": {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
  "tours": {
    "showCoursewareTour": false,
    "showExistingUserCourseHomeTour": false,
    "showNewUserCourseHomeModal": false,
    "showNewUserCourseHomeTour": false,
    "toursEnabled": false,
  },
}
`;

exports[`Data layer integration tests Test fetchProgressTab Should fetch, normalize, and save metadata 1`] = `
{
  "courseHome": {
    "courseId": "course-v1:edX+DemoX+Demo_Course",
    "courseStatus": "loaded",
    "proctoringPanelStatus": "loading",
    "showSearch": false,
    "targetUserId": undefined,
    "toastBodyLink": null,
    "toastBodyText": null,
    "toastHeader": "",
  },
  "courseware": {
    "courseId": null,
    "courseOutline": {},
    "courseOutlineShouldUpdate": false,
    "courseOutlineStatus": "loading",
    "courseStatus": "loading",
    "coursewareOutlineSidebarSettings": {},
    "sequenceId": null,
    "sequenceMightBeUnit": false,
    "sequenceStatus": "loading",
  },
  "learningAssistant": ObjectContaining {
    "conversationId": Any<String>,
  },
  "models": {
    "courseHomeMeta": {
      "course-v1:edX+DemoX+Demo_Course": {
        "canViewCertificate": true,
        "celebrations": null,
        "courseAccess": {
          "additionalContextUserMessage": null,
          "developerMessage": null,
          "errorCode": null,
          "hasAccess": true,
          "userFragment": null,
          "userMessage": null,
        },
        "id": "course-v1:edX+DemoX+Demo_Course",
        "isEnrolled": false,
        "isMasquerading": false,
        "isNewDiscussionSidebarViewEnabled": false,
        "isSelfPaced": false,
        "isStaff": false,
        "number": "DemoX",
        "org": "edX",
        "originalUserIsStaff": false,
        "start": "2013-02-05T05:00:00Z",
        "tabs": [
          {
            "slug": "outline",
            "title": "Course",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course/",
          },
          {
            "slug": "discussion",
            "title": "Discussion",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/discussion/forum/",
          },
          {
            "slug": "wiki",
            "title": "Wiki",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course_wiki",
          },
          {
            "slug": "progress",
            "title": "Progress",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/progress",
          },
          {
            "slug": "instructor",
            "title": "Instructor",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/instructor",
          },
          {
            "slug": "dates",
            "title": "Dates",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/dates",
          },
        ],
        "title": "Demonstration Course",
        "userTimezone": "UTC",
        "username": "MockUser",
        "verifiedMode": {
          "accessExpirationDate": null,
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "8CF08E5",
          "upgradeUrl": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
      },
    },
    "progress": {
      "course-v1:edX+DemoX+Demo_Course": {
        "accessExpiration": null,
        "certificateData": {},
        "completionSummary": {
          "completeCount": 1,
          "incompleteCount": 1,
          "lockedCount": 0,
        },
        "courseGrade": {
          "isPassing": true,
          "letterGrade": "pass",
          "percent": 1,
        },
        "courseId": "course-v1:edX+DemoX+Demo_Course",
        "creditCourseRequirements": null,
        "end": "3027-03-31T00:00:00Z",
        "enrollmentMode": "audit",
        "gradesFeatureIsFullyLocked": false,
        "gradesFeatureIsPartiallyLocked": false,
        "gradingPolicy": {
          "assignmentPolicies": [
            {
              "averageGrade": "1.0000",
              "numDroppable": 1,
              "shortLabel": "HW",
              "type": "Homework",
              "weight": 1,
              "weightedGrade": 1,
            },
          ],
          "gradeRange": {
            "pass": 0.75,
          },
        },
        "hasScheduledContent": false,
        "id": "course-v1:edX+DemoX+Demo_Course",
        "sectionScores": [
          {
            "displayName": "First section",
            "subsections": [
              {
                "assignmentType": "Homework",
                "blockKey": "block-v1:edX+DemoX+Demo_Course+type@sequential+block@12345",
                "displayName": "First subsection",
                "hasGradedAssignment": true,
                "learnerHasAccess": true,
                "numPointsEarned": 0,
                "numPointsPossible": 3,
                "percentGraded": 0,
                "problemScores": [
                  {
                    "earned": 0,
                    "possible": 1,
                  },
                  {
                    "earned": 0,
                    "possible": 1,
                  },
                  {
                    "earned": 0,
                    "possible": 1,
                  },
                ],
                "showCorrectness": "always",
                "showGrades": true,
                "url": "http://learning.edx.org/course/course-v1:edX+Test+run/first_subsection",
              },
            ],
          },
          {
            "displayName": "Second section",
            "subsections": [
              {
                "assignmentType": "Homework",
                "displayName": "Second subsection",
                "hasGradedAssignment": true,
                "numPointsEarned": 1,
                "numPointsPossible": 1,
                "percentGraded": 1,
                "problemScores": [
                  {
                    "earned": 1,
                    "possible": 1,
                  },
                ],
                "showCorrectness": "always",
                "showGrades": true,
                "url": "http://learning.edx.org/course/course-v1:edX+Test+run/second_subsection",
              },
            ],
          },
        ],
        "studioUrl": "http://studio.edx.org/settings/grading/course-v1:edX+Test+run",
        "userHasPassingGrade": false,
        "verificationData": {
          "link": null,
          "status": "none",
          "statusDate": null,
        },
        "verifiedMode": null,
      },
    },
  },
  "plugins": {},
  "recommendations": {
    "recommendationsStatus": "loading",
  },
  "specialExams": {
    "activeAttempt": null,
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": {
      "attempt": {
        "attempt_code": "",
        "attempt_id": null,
        "attempt_status": "",
        "course_id": "",
        "desktop_application_js_url": "",
        "exam_display_name": "",
        "exam_started_poll_url": "",
        "exam_type": "",
        "exam_url_path": "",
        "external_id": "",
        "in_timed_exam": true,
        "ping_interval": null,
        "taking_as_proctored": true,
        "time_remaining_seconds": null,
        "use_legacy_attempt_api": true,
      },
      "backend": "",
      "content_id": "",
      "course_id": "",
      "due_date": null,
      "exam_name": "",
      "external_id": "",
      "hide_after_due": false,
      "id": null,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": [],
        "failed_prerequisites": [],
        "pending_prerequisites": [],
        "satisfied_prerequisites": [],
      },
      "time_limit_mins": null,
      "type": "",
    },
    "examAccessToken": {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": true,
    "proctoringSettings": {
      "exam_proctoring_backend": {
        "download_url": "",
        "instructions": [],
        "name": "",
        "rules": {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
  "tours": {
    "showCoursewareTour": false,
    "showExistingUserCourseHomeTour": false,
    "showNewUserCourseHomeModal": false,
    "showNewUserCourseHomeTour": false,
    "toursEnabled": false,
  },
}
`;
